--- a/Projet/statics/lang/en.json
+++ b/Projet/statics/lang/en.json
@@ -1,7 +1,7 @@
 {
-  "PageNames" : {
+  "pageNames" : {
     "home" : "Home",
-    "Report" : "Report"
+    "report" : "Report"
   },
   "base" : {
   },
