multilang html dynamic

--- a/Projet/statics/lang/fr.json
+++ b/Projet/statics/lang/fr.json
@@ -1,11 +1,24 @@
 {
-  "PageNames" : {
+  "pageNames" : {
     "home" : "Acceuil",
-    "Report" : "Rapport"
+    "report" : "Rapport"
   },
   "base" : {
+    "header": {
+      "homeNav": "Accueil"
+    },
+    "footer": {
+      "aboutUs": "A Propos de Nous",
+      "aboutUsMessage": "Fournir des solutions d'analyse de sites web avec une technologie de pointe.",
+      "connect": "Réseaux",
+      "connectGitHub": "GitHub"
+    }
   },
   "home" : {
+    "homeMessage": "Analysez et Sécurisez votre site.",
+    "inputMessage": "Analyseur de site",
+    "inputPlaceholder": "Entrez un URL de Site (ex: https://exemple.com)",
+    "inputButton": "Analyser le Site"
   },
   "report" : {
   }
