Adding a console log system

--- a/Projet/statics/lang/fr.json
+++ b/Projet/statics/lang/fr.json
@@ -9,7 +9,7 @@
     },
     "footer": {
       "aboutUs": "A Propos de Nous",
-      "aboutUsMessage": "Fournir des solutions d'analyse de sites web avec une technologie de pointe.",
+      "aboutUsMessage": "Nous fournissons des solutions d'analyse de sites web avec une technologie de pointe.",
       "connect": "Réseaux",
       "connectGitHub": "GitHub"
     }
