--- a/Projet/statics/lang/en.json
+++ b/Projet/statics/lang/en.json
@@ -18,7 +18,9 @@
     "homeMessage": "Analyse and Secure your site.",
     "inputMessage": "Website Analyzer",
     "inputPlaceholder": "Enter website URL (e.g., https://example.com)",
-    "inputButton": "Analyse Website"
+    "inputButton": "Analyse Website",
+    "loadingMessage": "Analysing website...",
+    "statusMessage": "Analysis complete!"
   },
   "report" : {
     "reportMessage": "Analysis Done",
